@@ -1,4 +1,4 @@
-# $NetBSD: mi,v 1.670 2006/11/10 19:43:02 christos Exp $
+# $NetBSD: mi,v 1.671 2006/11/11 14:47:27 jmmv Exp $
 .						base-sys-root
 ./altroot					base-sys-root
 ./bin						base-sys-root
@@ -115,6 +115,7 @@
 ./libdata/firmware/rum/rum-license		base-sys-root
 ./libdata/firmware/rum/rum-rt2573		base-sys-root
 ./libexec					base-sys-root
+./libexec/lfs_cleanerd				base-sysutil-bin
 ./mnt						base-sys-root
 ./rescue					base-sys-root
 ./root						base-sys-root
@@ -914,7 +915,7 @@
 ./usr/libexec/kdc				base-obsolete		obsolete
 ./usr/libexec/kfd				base-obsolete		obsolete
 ./usr/libexec/kpasswdd				base-krb5-bin		kerberos
-./usr/libexec/lfs_cleanerd			base-sysutil-bin
+./usr/libexec/lfs_cleanerd			base-sysutil-bin	obsolete
 ./usr/libexec/locate.bigram			base-sysutil-bin
 ./usr/libexec/locate.code			base-sysutil-bin
 ./usr/libexec/locate.updatedb			base-sysutil-bin
